--- a/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
+++ b/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
@@ -45,10 +45,10 @@
         <td>{{ data.vendor_name }}</td>
         <td>{{ getWorknames(data.work_id) }}</td>
         <td>{{ data.location }}</td>
-        <td>{{ data.tender_cost }}</td>
-        <td>{{ data.status }}</td>
-        <td>{{ data.start_date | date : "dd-MM-YYYY hh:mm aaa" }}</td>
-        <td>{{ data.end_date | date : "dd-MM-YYYY hh:mm aaa" }}</td>
+        <td>{{ data.tender_cost | currencyIn}}</td>
+        <td>{{ data.status | titlecase}}</td>
+        <td>{{ data.start_date | date : "dd-MM-YYYY" }}</td>
+        <td>{{ data.end_date | date : "dd-MM-YYYY" }}</td>
         <td>
           <div class="editbtn">
             <a nz-tooltip="Edit" (click)="edit(data)"><i class="fa-regular fa-pen-to-square"></i></a>
