view option modified for multiple components
added image to survey report and work orders

--- a/Frontend/src/app/modules/expenditure/components/expenditure/expenditure.component.html
+++ b/Frontend/src/app/modules/expenditure/components/expenditure/expenditure.component.html
@@ -1,4 +1,10 @@
-<nz-breadcrumb>
+<nz-content id="component-content" class="n1">
+  <img  src="https://www.lawrenceprospera.org/images/quintana/Page_Under_Construction.jpg" class="i1"/>
+</nz-content>
+
+
+
+<!-- <nz-breadcrumb>
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
     <a routerLink="modules/dashboard">Dashboard</a>
@@ -168,4 +174,4 @@
       </button>
     </div>
   </ng-template>
-</nz-drawer>
+</nz-drawer> -->
