--- a/Frontend/src/app/modules/survey-report/components/survey-report/survey-report.component.html
+++ b/Frontend/src/app/modules/survey-report/components/survey-report/survey-report.component.html
@@ -1,1 +1,3 @@
-<p>survey-report works!</p>
+<nz-content id="component-content" class="n1">
+    <img  src="https://www.lawrenceprospera.org/images/quintana/Page_Under_Construction.jpg" class="i1"/>
+</nz-content>
