--- a/Frontend/src/app/modules/funds/components/funds/funds.component.html
+++ b/Frontend/src/app/modules/funds/components/funds/funds.component.html
@@ -52,11 +52,11 @@
         <td>{{ data.fund_released_date | date : "dd-MM-YYYY"}}</td>
         <td>
           <div id="editbtn">
-            <a nz-tooltip="Edit" (click)="edit(data)"
+            <a nz-tooltip="Edit" (click)="edit('edit',data)"
               ><i class="fa-regular fa-pen-to-square"></i
             ></a>
             <b> / </b>
-            <a nz-tooltip="View" (click)="edit(data)"
+            <a nz-tooltip="View" (click)="edit('view',data)"
               ><i class="fa-regular fa-eye"></i
             ></a>
           </div>
@@ -176,7 +176,7 @@
       <button nz-button *ngIf="submit" nzType="primary" (click)="onCreateSubmit()">
         Submit
       </button>
-      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdateSubmit()">
+      <button nz-button *ngIf="!submit && updateBtnDisable" nzType="primary" (click)="onUpdateSubmit()">
         Update
       </button>
     </div>
