--- a/Frontend/src/app/modules/work-orders/components/work-orders/work-orders.component.html
+++ b/Frontend/src/app/modules/work-orders/components/work-orders/work-orders.component.html
@@ -1,1 +1,3 @@
-<p>work-orders works!</p>
+<nz-content id="component-content" class="n1">
+    <img  src="https://www.lawrenceprospera.org/images/quintana/Page_Under_Construction.jpg" class="i1"/>
+</nz-content>
