--- a/Frontend/src/app/modules/work-orders/components/work-orders/work-orders.component.html
+++ b/Frontend/src/app/modules/work-orders/components/work-orders/work-orders.component.html
@@ -1,3 +1,3 @@
-<nz-content id="component-content" class="n1">
+<nz-content id="n1" >
     <img  src="https://www.lawrenceprospera.org/images/quintana/Page_Under_Construction.jpg" class="i1"/>
 </nz-content>
