Tenders and Approvals Changes Done
Tenders and Approvals Changes Done

--- a/Frontend/src/app/modules/approvals/components/approvals/approvals.component.html
+++ b/Frontend/src/app/modules/approvals/components/approvals/approvals.component.html
@@ -8,24 +8,22 @@
 <nz-content>
 
     <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()" nz-row nzGutter="16">
-        <nz-form-item nz-col nzSpan="6">
+        <!-- <nz-form-item nz-col nzSpan="6">
             <nz-form-label >Date Range</nz-form-label>
             <nz-form-control>
               <nz-range-picker formControlName="rangePicker" ></nz-range-picker>
             </nz-form-control>
-          </nz-form-item>
-
+          </nz-form-item> -->
         <nz-form-item nz-col nzSpan="6" class="ml-3">
             <nz-form-label >Type</nz-form-label> 
             <nz-form-control>
               <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select Type" formControlName="type">
-                <nz-option nzValue="Department1" nzLabel="Department1"></nz-option>
-                <nz-option nzValue="Department2" nzLabel="Department2"></nz-option>
+                <nz-option nzValue="tenders" nzLabel="Tenders"></nz-option>
+                <nz-option nzValue="invoices" nzLabel="Invoices"></nz-option>
               </nz-select>
             </nz-form-control>
         </nz-form-item>
-
-        <nz-form-item nz-col nzSpan="6" class="ml-3">
+        <!-- <nz-form-item nz-col nzSpan="6" class="ml-3">
             <nz-form-label >Status</nz-form-label> 
             <nz-form-control>
               <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select Type" formControlName="status">
@@ -33,12 +31,19 @@
                 <nz-option nzValue="InActive" nzLabel="InActive"></nz-option>
               </nz-select>
             </nz-form-control>
+        </nz-form-item> -->
+        <nz-form-item nz-col nzSpan="6" class="ml-3">
+          <nz-form-label>Status</nz-form-label>
+          <nz-form-control>
+            <nz-select formControlName="status"  nzPlaceHolder="Select Status" nzShowSearch nzAllowClear>
+              <nz-option nzValue="open" nzLabel="Open"></nz-option>
+              <nz-option nzValue="close" nzLabel="Close"></nz-option>
+              <nz-option nzValue="accept" nzLabel="Accept"></nz-option>
+              <nz-option nzValue="reject" nzLabel="Reject"></nz-option>
+            </nz-select>
+          </nz-form-control>          
         </nz-form-item>
-
-        <button nz-button nzType="primary" nz-col nzSpan="4" class="ml-3">Submit</button>
-
-
-        
+        <button nz-button nzType="primary" nz-col nzSpan="4" class="ml-2">Submit</button>        
     </form>
 
     <nz-table #basicTable [nzData]="listOfData" nzShowPagination nzShowSizeChanger [nzPageSizeOptions] =[5,10,15,20]>
